--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -3,11 +3,16 @@
 {% load i18n %}
 {% load account %}
 
-{% block head_title %}{% trans "Password Reset" %}{% endblock %}
+{% block title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block inner_content %}
-    <h2 class="logo-font text-center mb-4">{% trans "Password Reset" %}</h2>
-    <hr class="w-50 mb-1">
+<div class="container-fluid">
+    <div class="row-products">
+        <div class="col">
+            <h2 class="logo-font text-center">{% trans "Log Out" %}</h2>
+        </div>
+    </div>
+</div>
     
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
