--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -1,11 +1,21 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% block title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h2 class="logo-font text-center mb-4">{% trans "Change Password" %}</h2>
-    <hr class="w-50 mb-1">
-    
-    <p>{% trans 'Your password is now changed.' %}</p>
+{% block inner_content %}
+<div class="container-fluid">
+    <div class="row-products">
+        <div class="col">
+            <h2 class="logo-font text-center">{% trans "Change Password" %}</h2>
+    </div>
+</div>
+
+<div class="container general-container">
+    <div class="row">
+        <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2">
+            <p class="text-center">{% trans 'Your password is now changed.' %}</p>
+        </div>
+    </div>
+</div>
 {% endblock %}
