--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -2,22 +2,33 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Signup" %}{% endblock %}
+{% block title %}{% trans "Register" %}{% endblock %}
 
 {% block inner_content %}
-<h2 class="logo-font text-center mb-4">{% trans "Sign Up" %}</h2>
-<hr class="w-50 mb-1">
+<div class="container-fluid">
+    <div class="row-products">
+        <div class="col">
+            <h2 class="logo-font text-center">{% trans "Create an account" %}</h2>
+        </div>
+    </div>
+</div>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
-
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form|crispy }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">Back to Login</a>
-  <button type="submit">{% trans "Sign Up" %}</button>
-</form>
-
+<div class="container general-container">
+    <div class="row">
+        <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2">
+            <div class="div-signup-form">
+                <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    {% if redirect_field_value %}
+                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                    {% endif %}
+                    <button type="submit" class="cta cta-black mt-2">{% trans "Register" %}</button>
+                </form>
+                <p class="mt-4 signup-p">{% blocktrans %}Already have an account? <a href="{{ login_url }}"
+                        class="text-link">Log in here</a>.{% endblocktrans %}</p>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
