--- a/templates/allauth/account/verified_email_required.html
+++ b/templates/allauth/account/verified_email_required.html
@@ -2,11 +2,16 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
+{% block title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
 {% block inner_content %}
-<h2 class="logo-font text-center mb-4">{% trans "Verify Your E-mail Address" %}</h2>
-<hr class="w-50 mb-1">
+<div class="container-fluid">
+    <div class="row-products">
+        <div class="col">
+            <h2 class="logo-font text-center">{% trans "Verify Your E-mail Address" %}</h2>
+        </div>
+    </div>
+</div>
 
 {% url 'account_email' as email_url %}
 
