--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -16,14 +16,14 @@
                 <div class="row">
                     <h2 class="h2-style text-center"></h2>
                 </div>
-                <div class="row mt-3">
+                <div class="row mt-3 text-center">
                     <div class="container">
                         <p class="paragraph-margin">
                             You want to experience life to the fullest. When you create lifelong memories, you are actually investing in your life. Our experiences are a greater part of ourselves than our material goods.
                             You can love material things, you may even think that part of your identity is connected to those things, but nevertheless they remain separate from you. In contrast, your experiences are truly part of you. We are all the sum of our experiences and more experience leads to more happiness.
 
                         Creating parties with lifelong memories and providing a moment to escape from everyday reality for you and your guests.
-                        At Fancy Day Design, we feel fortunate to be in a position to provide such a positive and luxurious service.*</br>
+                        At Fancy Day Design, we feel fortunate to be in a position to provide such a positive and luxurious service.*</br></br>
 
                     <small>* Not everyone can afford a birthday party, so I'd like to help those who can't afford a birthday. Everyone deserves to feel really happy. If you want, you can support this cause yourself. Feel free to take a look at the website <a href="https://uitgesteldekinderfeestjes.nl/">Uitgestelde Kinderfeestjes</a></small></p>
                     </div>
