--- a/static/css/base.css
+++ b/static/css/base.css
@@ -173,7 +173,7 @@ span.badge.rounded-pill {
 }
 
 #homepage-header {
-    background: url('/media/wedding_theme.jpeg') no-repeat center center fixed;
+    background: url('/media/bday-2.jpg') no-repeat center center fixed;
     height: 800px;
     background-size: cover;
     margin-bottom: 4.5rem;
@@ -196,7 +196,7 @@ span.badge.rounded-pill {
 #home-header-tagline {
     font-family: 'Cookie', sans-serif;
     font-weight: 100;
-    font-size: 70px;
+    font-size: 80px;
     color: black;
     text-align: left;
     text-decoration: underline;
