--- a/templates/allauth/account/verified_email_required.html
+++ b/templates/allauth/account/verified_email_required.html
@@ -24,7 +24,7 @@
 
             <p>{% blocktrans %}We have sent an e-mail to you for
                 verification. Please click on the link inside this e-mail. Please
-                contact us at <a href="mailto:fandaydesign2021@gmail.com">fancydaydesign2021@gmail.com/a>
+                contact us at <a href="mailto:fandaydesign2021@gmail.com">fancydaydesign2021@gmail.com</a>
                 if you do not receive it within a few minutes.{% endblocktrans %}</p>
         </div>
     </div>
