--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1010,6 +1010,170 @@ footer p {
 
 /*----------------------- Media Queries/ Responsiveness --------------------*/
 
+@media (min-width: 1199px) {
+	.header-content {
+		margin-top: 20%;
+	}
+	.nav-center {
+		padding-top: 0;
+	}
+}
+
+/* -----------Larger Container on xl screens------------*/
+
+@media (min-width: 1200px) {
+	.container {
+		max-width: 80%;
+	}
+}
+
+/* -----------------Allauth form formatting--------------------- */
+
+.allauth-form-inner-content p {
+	margin-top: 1.5rem;
+	/* mt-4 */
+	color: #6c757d;
+	/* text-secondary */
+}
+
+.allauth-form-inner-content input {
+	border-color: #231f20;
+	border-radius: 0;
+}
+
+.allauth-form-inner-content label:not([for='id_remember']) {
+	display: none;
+}
+
+.allauth-form-inner-content input::placeholder {
+	color: grey;
+}
+
+.allauth-form-inner-content button,
+.allauth-form-inner-content input[type='submit'] {
+	/* btn */
+	display: inline-block;
+	font-weight: 400;
+	color: black;
+	text-align: center;
+	vertical-align: middle;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	background-color: #c19c77;
+	border: 1px solid #231f20;
+	padding: .375rem .75rem;
+	font-size: 1rem;
+	line-height: 1.5;
+	border-radius: 0;
+	/* standard bootstrap btn transitions */
+	transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+.allauth-form-inner-content button:hover,
+.allauth-form-inner-content input[type='submit']:hover {
+	background-color: #c19c77;
+	color: #fff9f9;
+	border-color: #231f20;
+}
+
+.allauth-form-inner-content a {
+	color: #c19c77;
+	/* text-info */
+}
+@media(min-width:992px) {
+	.about-image {
+		width: 100%;
+		height: 100%;
+	}
+	.about-heading {
+		font-size: 2rem;
+	}
+	.about-text {
+		font-size: 1rem;
+	}
+	.fixed-top-desktop-only {
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        z-index: 1030;
+    }
+
+    .header-container {
+        padding-top: 164px;
+    }
+}
+
+@media (min-width: 767px) {
+	.nav-center {
+		padding-top: .5rem;
+	}
+	.header-content {
+		margin-top: 40%;
+	}
+	.nav-link-main {
+		padding-left: 1rem;
+	}
+	.fa-shopping-bag:before {
+		color: black;
+	}
+	.footer-row {
+		padding-bottom: 1rem;
+	}
+	.navbar-toggler {
+		border: 1px solid black;
+		margin-left: 1rem;
+	}
+	.about-text {
+		font-size: 1.3rem;
+	}
+}
+
+@media(max-width:768px) {
+	.fa-arrow-right:before,
+	.fa-arrow-left:before {
+		padding: 0.8rem;
+	}
+	.section-2-p {
+		font-size: .9rem;
+		padding: 0;
+	}
+	.section-cta {
+		padding: 5px 0px 30px;
+	}
+	.div-line-item {
+		margin-left: .4rem;
+	}
+}
+
+@media(max-width:767px) {
+	.carousel-caption img {
+		width: 4rem;
+		border-radius: 4rem;
+		margin-top: 1rem;
+	}
+	.carousel-caption {
+		position: initial;
+		z-index: 10;
+		padding: 3rem 2rem;
+		color: rgba(78, 77, 77, 0.856);
+		text-align: center;
+		font-size: 0.7rem;
+		font-style: italic;
+		font-weight: bold;
+		line-height: 1.5rem;
+	}
+	#image-caption {
+		font-style: normal;
+		font-size: 0.6rem;
+		margin-top: 0.5rem;
+	}
+}
+
+
+
 @media (max-width: 375px) {
 	.navbar-light .navbar-toggler {
 		padding: .25rem .75rem;
@@ -1127,163 +1291,5 @@ footer p {
 	}
 	.title_tabs-text {
 		padding-left: .5rem;
-	}
-}
-
-@media (min-width: 767px) {
-	.nav-center {
-		padding-top: .5rem;
-	}
-	.header-content {
-		margin-top: 40%;
-	}
-	.nav-link-main {
-		padding-left: 1rem;
-	}
-	.fa-shopping-bag:before {
-		color: black;
-	}
-	.footer-row {
-		padding-bottom: 1rem;
-	}
-	.navbar-toggler {
-		border: 1px solid black;
-		margin-left: 1rem;
-	}
-	.about-text {
-		font-size: 1.3rem;
-	}
-}
-
-@media(max-width:768px) {
-	.fa-arrow-right:before,
-	.fa-arrow-left:before {
-		padding: 0.8rem;
-	}
-	.section-2-p {
-		font-size: .9rem;
-		padding: 0;
-	}
-	.section-cta {
-		padding: 5px 0px 30px;
-	}
-	.div-line-item {
-		margin-left: .4rem;
-	}
-}
-
-@media(max-width:767px) {
-	#image-caption {
-		font-style: normal;
-		font-size: 0.6rem;
-		margin-top: 0.5rem;
-	}
-}
-
-@media(max-width:767px) {
-	.carousel-caption img {
-		width: 4rem;
-		border-radius: 4rem;
-		margin-top: 1rem;
-	}
-}
-
-@media(max-width:767px) {
-	.carousel-caption {
-		position: initial;
-		z-index: 10;
-		padding: 3rem 2rem;
-		color: rgba(78, 77, 77, 0.856);
-		text-align: center;
-		font-size: 0.7rem;
-		font-style: italic;
-		font-weight: bold;
-		line-height: 1.5rem;
-	}
-}
-
-@media(min-width:992px) {
-	.about-image {
-		width: 100%;
-		height: 100%;
-	}
-	.about-heading {
-		font-size: 2rem;
-	}
-	.about-text {
-		font-size: 1rem;
-	}
-}
-
-/* -----------Slightly larger container on xl screens------------*/
-
-@media (min-width: 1200px) {
-	.container {
-		max-width: 80%;
-	}
-}
-
-/* -----------------Allauth form formatting--------------------- */
-
-.allauth-form-inner-content p {
-	margin-top: 1.5rem;
-	/* mt-4 */
-	color: #6c757d;
-	/* text-secondary */
-}
-
-.allauth-form-inner-content input {
-	border-color: #231f20;
-	border-radius: 0;
-}
-
-.allauth-form-inner-content label:not([for='id_remember']) {
-	display: none;
-}
-
-.allauth-form-inner-content input::placeholder {
-	color: grey;
-}
-
-.allauth-form-inner-content button,
-.allauth-form-inner-content input[type='submit'] {
-	/* btn */
-	display: inline-block;
-	font-weight: 400;
-	color: black;
-	text-align: center;
-	vertical-align: middle;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-	background-color: #c19c77;
-	border: 1px solid #231f20;
-	padding: .375rem .75rem;
-	font-size: 1rem;
-	line-height: 1.5;
-	border-radius: 0;
-	/* standard bootstrap btn transitions */
-	transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-}
-
-.allauth-form-inner-content button:hover,
-.allauth-form-inner-content input[type='submit']:hover {
-	background-color: #c19c77;
-	color: #fff9f9;
-	border-color: #231f20;
-}
-
-.allauth-form-inner-content a {
-	color: #c19c77;
-	/* text-info */
-}
-
-@media (min-width: 1199px) {
-	.header-content {
-		margin-top: 20%;
-	}
-	.nav-center {
-		padding-top: 0;
 	}
 }
