--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,7 +3,7 @@
 
 {% block head_content %}
 <!--- Hero image and text --->
-    <div id="homepage-header">
+    <div id="home-header">
         <div class="container">
             <div class="row">
                 <div class="col-7 col-md-6">
