--- a/static/css/base.css
+++ b/static/css/base.css
@@ -172,7 +172,7 @@ span.badge.rounded-pill {
 	width: 80%;
 }
 
-#home-header {
+#homepage-header {
 	background: url('/media/bday-2.jpg') no-repeat center center fixed;
 	height: 800px;
 	background-size: cover;
@@ -220,7 +220,7 @@ span.badge.rounded-pill {
 .home-decor {
 	text-align: center;
 	font-family: 'Cookie', sans-serif;
-	color: black;
+	color: var(--color-light-black);
 	font-size: 2.6rem;
 }
 
@@ -1010,13 +1010,6 @@ footer p {
 
 /*----------------------- Media Queries/ Responsiveness --------------------*/
 
-/* Slightly larger container on xl screens */
-@media (min-width: 1200px) {
-	.container {
-	  max-width: 80%;
-	}
-}
-
 @media (max-width: 375px) {
 	.navbar-light .navbar-toggler {
 		padding: .25rem .75rem;
@@ -1043,7 +1036,7 @@ footer p {
 	}
 	#home-header,
 	#home-header-tagline {
-		font-size: 30px;
+		font-size: 45px;
 	}
 	#home-header-h1 {
 		font-size: 50px;
@@ -1210,7 +1203,7 @@ footer p {
 
 @media(min-width:992px) {
 	.about-image {
-		width: 90%;
+		width: 100%;
 		height: 100%;
 	}
 	.about-heading {
@@ -1219,9 +1212,59 @@ footer p {
 	.about-text {
 		font-size: 1rem;
 	}
-	.increment-qty, .decrement-qty {
+}
+
+@media (max-width: 991px) {
+    .header-container {
+        padding-top: 116px;
+    }
+
+    body {
+        height: calc(100vh - 116px);
+    }
+
+    .display-4.logo-font.text-black {
+        font-size: 2rem;
+    }
+
+    .nav-link {
+        padding: 0.15rem;
+    }
+
+    .nav-link i.fa-lg {
+        font-size: 1rem;
+    }
+
+    .navbar-toggler {
+        padding: .6rem .6rem;
+        font-size: 1rem;
+    }
+
+    #delivery-banner h4 {
+        font-size: .9rem;
+    }
+
+    .btn.btn-outline-black.rounded-0,
+    .btn.btn-black.rounded-0 {
+        padding: .375rem .375rem;
+    }
+
+    .btn.btn-outline-black.rounded-0.btn-lg,
+    .btn.btn-black.rounded-0.btn-lg {
+        padding: .375rem .375rem;
+        font-size: .75rem;
+    }
+
+    .increment-qty, .decrement-qty {
         padding: .25rem .5rem !important;
     }
+}
+/* -----------Slightly larger container on xl screens------------*/
+
+@media (min-width: 1200px) {
+	.container {
+		max-width: 80%;
+	}
 }
 
 /* -----------------Allauth form formatting--------------------- */
