--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -23,7 +23,7 @@
                 <div class="about-details-container mb-5 mt-md-5">
                     <h2 class="about-heading text-center">My Story</h2>
                     <hr class="w-50 mb-1">
-                    <p class="about-text">Hello, my name is Shakira Lacroes, the face behind Fancy Day Design. As a young girl I regularly did photo shoots with my sisters. Everything had to be perfect, not only our clothes but also the background had to be in the right style. Even then I knew my awareness of decorating was growing and when it would stand out in a photo. <br/>
+                    <p class="about-text text-center">Hello, my name is Shakira Lacroes, the face behind Fancy Day Design. As a young girl I regularly did photo shoots with my sisters. Everything had to be perfect, not only our clothes but also the background had to be in the right style. Even then I knew my awareness of decorating was growing and when it would stand out in a photo. <br/>
 
                         Before I started decorating, I was active in youth care for many years. I've always enjoyed doing this. In all those years I have organized and decorated various birthdays, baby showers for almost everyone in my immediate environment. Because of my passion for decorating, it was a logical step to do this professionally as a professional party stylist.<br/><br/>
     
