--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,7 +4,7 @@
 {% block head_content %}
 <!--- Hero image and text --->
     <div id="home-header">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-7 col-md-6">
                 </div>
