--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1036,7 +1036,7 @@ footer p {
 	}
 	#home-header,
 	#home-header-tagline {
-		font-size: 45px;
+		font-size: 40px;
 	}
 	#home-header-h1 {
 		font-size: 50px;
@@ -1197,6 +1197,7 @@ footer p {
 		text-align: center;
 		font-size: 0.7rem;
 		font-style: italic;
+		font-weight: bold;
 		line-height: 1.5rem;
 	}
 }
@@ -1214,51 +1215,6 @@ footer p {
 	}
 }
 
-@media (max-width: 991px) {
-    .header-container {
-        padding-top: 116px;
-    }
-
-    body {
-        height: calc(100vh - 116px);
-    }
-
-    .display-4.logo-font.text-black {
-        font-size: 2rem;
-    }
-
-    .nav-link {
-        padding: 0.15rem;
-    }
-
-    .nav-link i.fa-lg {
-        font-size: 1rem;
-    }
-
-    .navbar-toggler {
-        padding: .6rem .6rem;
-        font-size: 1rem;
-    }
-
-    #delivery-banner h4 {
-        font-size: .9rem;
-    }
-
-    .btn.btn-outline-black.rounded-0,
-    .btn.btn-black.rounded-0 {
-        padding: .375rem .375rem;
-    }
-
-    .btn.btn-outline-black.rounded-0.btn-lg,
-    .btn.btn-black.rounded-0.btn-lg {
-        padding: .375rem .375rem;
-        font-size: .75rem;
-    }
-
-    .increment-qty, .decrement-qty {
-        padding: .25rem .5rem !important;
-    }
-}
 /* -----------Slightly larger container on xl screens------------*/
 
 @media (min-width: 1200px) {
