--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <!--- Blog Details --->
-<div class="container-fluid">
+<div class="container-fluid center">
     <div class="row mt-2 py-2">
         <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2">
             <img class="card-img-top img-fluid" src="{{ post.image.url }}" alt="{{ post.name }}">
