--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,16 +3,15 @@
 
 {% block head_content %}
 <!--- Hero image and text --->
-    
-    <div class="container center">
-        <div id="home-header">
+    <div id="homepage-header center">
+        <div class="container">
             <div class="row">
                 <div class="col-7 col-md-6">
                 </div>
                 <div class="col-12">
                     <div class="header-content s-auto">
                         <div class="header-text">
-                            </br></br></br>
+                            </br></br></br></br></br>
                             <p id="home-header-tagline">A special moment deserves a</p>
                             <h1 id="home-header-h1">Fancy Day Design</h1>
                         </div>
